test/expected/exit_trap_note.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "trap" "rm -f nonexistent_zzz_glob_*.tmp" "EXIT"]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "hello"]
[Word
  Unquoted "trap"
]
[Word
  Literal "rm -f nonexistent_zzz_glob_*.tmp"
]
[Word
  Unquoted "EXIT"
]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "hello"
]
hello
[Code 0]
shit: 1:7: error: the glob pattern 'nonexistent_zzz_glob_*.tmp' matched no file, it expands to its literal text, which is rarely intended. Probe for matches with compgen -G 'nonexistent_zzz_glob_*.tmp' or relax with set +o failglob.
     1 |  rm -f nonexistent_zzz_glob_*.tmp
       |        ^~~~~~~~~~~~~~~~~~~~~~~~~~ here.
shit: note: This error was raised while running the EXIT trap.
